Improved readability